Enable page numbering

--- a/paper/onion.tex
+++ b/paper/onion.tex
@@ -8,6 +8,9 @@
 \def\@copyrightspace{\relax}
 \makeatother
 
+% Enable page numbering which sig-templates omit by default
+\pagenumbering{arabic}
+
 \begin{document}
 
 \title{Onion Routing and Low Latency Network Anonymization Mechanisms}
