missing url inserted

--- a/paper/onion.bib
+++ b/paper/onion.bib
@@ -76,7 +76,7 @@
   author = {Conde Nast International, Inc},
   title = {Rogue Nodes Turn Tor Anonymizer Into Eavesdropper`s Paradise},
   year = {2014},
-  url = "",
+  url = {http://www.theprivacyblog.com/online-privacy/rogue-nodes-turn-tor-anonymizer-into-eavesdroppers-paradise/},
   urldate = {2014-11-26}
 }
 
