Bibliography: ieeetran style, misc entries - fixes #45

--- a/paper/onion.bib
+++ b/paper/onion.bib
@@ -9,11 +9,12 @@
   publisher={IEEE}
 }
 
-@online{tor,
-  author = {The Tor Project, Inc},
+@misc{tor,
+  author = {{The Tor Project, Inc}},
   title = {Tor Project: Anonymity Online},
   year = {2014},
-  url = {https://www.torproject.org/},
+  howpublished = {URL: \url{https://www.torproject.org/}},
+  note = {Accessed: November 27, 2014},
   urldate = {2014-11-27}
 }
 
@@ -55,11 +56,12 @@
   organization={ACM}
 }
 
-@online{torspec,
-  author = {The Tor Project, Inc},
+@misc{torspec,
+  author = {{The Tor Project, Inc}},
   title = {Tor's protocol specifications},
   year = {2014},
-  url = {https://gitweb.torproject.org/torspec.git/},
+  howpublished = {URL: \url{https://gitweb.torproject.org/torspec.git/}},
+  note = {Accessed: November 26, 2014},
   urldate = {2014-11-26}
 }
 
@@ -72,11 +74,12 @@
   publisher={Springer}
 }
 
-@online{eavesdrop,
-  author = {Conde Nast International, Inc},
-  title = {Rogue Nodes Turn Tor Anonymizer Into Eavesdropper`s Paradise},
+@misc{eavesdrop,
+  author = {{Conde Nast International, Inc}},
+  title = {Rogue Nodes Turn Tor Anonymizer Into Eavesdropper's Paradise},
   year = {2014},
-  url = {http://www.theprivacyblog.com/online-privacy/rogue-nodes-turn-tor-anonymizer-into-eavesdroppers-paradise/},
+  howpublished = {URL: \url{http://www.theprivacyblog.com/online-privacy/rogue-nodes-turn-tor-anonymizer-into-eavesdroppers-paradise/}},
+  note = {Accessed: November 26, 2014},
   urldate = {2014-11-26}
 }
 
@@ -109,11 +112,12 @@
   school={Citeseer}
 }
 
-@online{i2p,
+@misc{i2p,
   author = {Tassilo Schweyer},
-  title = {I2P Anonymous Network},
+  title = {{I2P} Anonymous Network},
   year = {2014},
-  url = {https://geti2p.net/en/},
+  howpublished = {URL: \url{https://geti2p.net/en/}},
+  note = {Accessed: November 25, 2014},
   urldate = {2014-11-25}
 }
 
@@ -128,20 +132,20 @@
   publisher={ACM}
 }
 
-@online{torhacked,
-  author = {AnonHQ},
+@misc{torhacked,
+  author = {{AnonHQ}},
   title = {Tor Browser HACKED, Not Longer Safe and Anonymous},
   year = {2014},
-  url = {http://anonhq.com/tor-browser-hacked-not-longer-safe-and-anonymous/},
-  urldate = {2014-11-24}
+  howpublished = {URL: \url{http://anonhq.com/tor-browser-hacked-not-longer-safe-and-anonymous/}},
+  note = {Accessed: November 24, 2014},
+  date = {2014-11-24}
 }
 
 @misc{ORpublications,
   author = {Paul Syverson},
   title = {Onion Routing: Publications},
   year = {2014},
-  howbublished = "Website"
-  note = \url{http://www.onion-router.net/Publications.html}; accessed: November 24, 2014.
+  howpublished = {URL: \url{http://www.onion-router.net/Publications.html}},
+  note = {Accessed: November 24, 2014},
+  date = {2014-11-24}
 }
-
-
