added missing definitions for comment commands

--- a/paper/onion.tex
+++ b/paper/onion.tex
@@ -13,6 +13,23 @@
 \pagenumbering{arabic}
 
 %add commands for inserting comments
+\newcommand{\squishlist}{
+ \begin{list}{$\bullet$}
+  { \setlength{\itemsep}{0pt}
+     \setlength{\parsep}{0pt}
+    \setlength{\topsep}{0pt}
+    \setlength{\partopsep}{0pt}
+    \setlength{\leftmargin}{2em}
+    \setlength{\labelwidth}{1.5em}
+    \setlength{\labelsep}{0.5em} } }
+\newcommand{\squishend}{
+  \end{list}  }
+\newcommand{\boxedtext}[1]{\fbox{\scriptsize\bfseries\textsf{#1}}}
+\newcommand{\nota}[2]{
+   \boxedtext{#1}
+       {\small$\blacktriangleright$\emph{\textsl{#2}}$\blacktriangleleft$}
+}
+
 \newcommand\ag[1]{\nota{AG}{#1}}
 \newcommand\da[1]{\nota{DA}{#1}}
 \newcommand\fk[1]{\nota{FK}{#1}}
@@ -54,7 +71,7 @@ Daniel Achleitner\\
 
 \begin{abstract}
 
-As the World Wide Web began to connect the world in the 1990s as well as the early years of the new millennium, it became more and more a target area for organizations which had an interest in tracing traffic throughout the Internet. As a consequence, various frameworks were introduced on the basis of network anonymization mechanisms with the purpose of hiding routing information. In order to provide a technological overview in this field, this paper outlines the current state of the art of Low Latency Network Anonymization Concepts. Doing so, it especially focuses on the function of Onion Routing (OR) as it is used within the Tor framework. It furthermore points out security weakpoints regarding to OR and compares it with other anonymization frameworks, such as Mix Nets (MN), Garlic Routing (GR) and the Crowds. While MN and GR follow similar anonymization approaches compared to OR, Crowds is based on a very different mechanism. Nevertheless, as a final result this paper shows that all of the introduced mechanisms still need further work in order to overcome security weakpoints.
+As the World Wide Web began to connect the world in the 1990s as well as the early years of the new millennium, it became more and more a target area for organizations which had an interest in tracing traffic throughout the Internet. As a consequence, various frameworks were introduced on the basis of network anonymization mechanisms with the purpose of hiding routing information. In order to provide a technological overview in this field, this paper outlines the current state of the art of Low Latency Network Anonymization Concepts\fk{surely correct capitalization?}. Doing so, it especially focuses on the function of Onion Routing (OR) as it is used within the Tor framework. It furthermore points out security weakpoints regarding to OR and compares it with other anonymization frameworks, such as Mix Nets (MN), Garlic Routing (GR) and the Crowds. While MN and GR follow similar anonymization approaches compared to OR, Crowds is based on a very different mechanism. Nevertheless, as a final result this paper shows that all of the introduced mechanisms still need further work in order to overcome security weakpoints.
 
 \end{abstract}
 
