--- a/paper/onion.tex
+++ b/paper/onion.tex
@@ -71,7 +71,7 @@ Daniel Achleitner\\
 
 \begin{abstract}
 
-As the World Wide Web began to connect the world in the 1990s as well as the early years of the new millennium, it became more and more a target area for organizations which had an interest in tracing traffic throughout the Internet. As a consequence, various frameworks were introduced on the basis of network anonymization mechanisms with the purpose of hiding routing information. In order to provide a technological overview in this field, this paper outlines the current state of the art of Low Latency Network Anonymization Concepts\fk{surely correct capitalization?}. Doing so, it especially focuses on the function of Onion Routing (OR) as it is used within the Tor framework. It furthermore points out security weakpoints regarding OR and compares it with other anonymization frameworks, such as Mix Nets (MN), Garlic Routing (GR) and the Crowds. While MN and GR follow anonymization approaches similar to that of OR, Crowds is based on a very different mechanism. As a final result this paper shows that all of the introduced mechanisms still need further work in order to overcome security weaknesses.
+As the World Wide Web began to connect the world in the 1990s as well as the early years of the new millennium, it became more and more a target area for organizations which had an interest in tracing traffic throughout the Internet. As a consequence, various frameworks were introduced on the basis of network anonymization mechanisms with the purpose of hiding routing information. In order to provide a technological overview in this field, this paper outlines the current state of the art of Low Latency Network Anonymization concepts. Doing so, it especially focuses on the function of Onion Routing (OR) as it is used within the Tor framework. It furthermore points out security weakpoints regarding OR and compares it with other anonymization frameworks, such as Mix Nets (MN), Garlic Routing (GR) and the Crowds. While MN and GR follow anonymization approaches similar to that of OR, Crowds is based on a very different mechanism. As a final result this paper shows that all of the introduced mechanisms still need further work in order to overcome security weaknesses.
 
 \end{abstract}
 
@@ -89,7 +89,7 @@ Onion Routing (OR) is a low-latency based mechanism for the anonymous transmissi
 \section{State of the Art}
 
 \subsection{Functional Principle}
-During the creation of an anonymized message channel, the client first contacts a directory node, which stores a list of available transmission nodes (relays). Then it picks a subset out of the pool of available nodes and orders them to a chain. Using asymmetric key cryptography, the client first establishes a connection to the first node of the node chain. It does so by sending a message which contains a randomly generated circuit ID in order to be able to uniquely identify the connection between the client and the first node, a ``create circuit'' request in order to create a circuit with the first node and the client's part of a Diffie-Hellman handshake. The message is encrypted by the first node's public key, which the client previously obtained from the directory node. The first node of the chain replies to the client with its half of the Diffie-Hellman handshake~\cite{diffie1976new} as well as a hash of the client's Diffie-Hellman part.\fk{Shouldn't that actually be the first node's signature of the client's diffie-hellman handshake part? A hash value would not prove authenticity.} Through the hash, the client can verify the authenticity of the Node. In order to keep the efficiency of the OR mechanism on an adequate level, the Diffie-Hellman secret is used to encrypt all further communication between the client and the first node symmetrically. Next, the client sends a ``relay extend cell'' message to the first node, containing a circuit ID which might differ from the first one, a request in order to establish a connection from the first node to the second node, and the originator's half of another Diffie-Hellman handshake. The first node forwards this message to the second node in the chain and therefore extends the initial circuit. Like the way the first node did, the second node replies to that request with a hash\fk{again: surely not signature/digest?} of the given handshake part and adds its own half of the Diffie-Hellman handshake. The second node can only receive messages from the first node and cannot distinguish it from the initial client.\fk{that's an unclear way of saying what the next sentence says clearly - right?} Therefore the second node is unable to identify its predecessor as a node within the chain or as the client. As soon as the connection between both nodes is established, the first node sends a ``relay extended cell'' notification to the client, containing the second clients hash\fk{signature?} of the Diffie-Hellman secret, in order to inform it about the successful extension of the node chain. In the same manner as previously outlined, the ``relay extend cell'' procedure is repeated for every node, which was selected by the client to be a part of the transmission path.
+During the creation of an anonymized message channel, the client first contacts a directory server, which stores a list of available transmission nodes (relays). Then it picks a subset out of the pool of available nodes and orders them to a chain. Using asymmetric key cryptography, the client first establishes a connection to the first node of the node chain. It does so by sending a message which contains a randomly generated circuit ID in order to be able to uniquely identify the connection between the client and the first node, a ``create circuit'' request in order to create a circuit with the first node and the client's part of a Diffie-Hellman handshake. The message is encrypted by the first node's public key, which the client previously obtained from the directory node. The first node of the chain replies to the client with its half of the Diffie-Hellman handshake~\cite{diffie1976new} as well as a hash of the client's Diffie-Hellman part. Through the hash, the client can verify the authenticity of the Node. In order to keep the efficiency of the OR mechanism on an adequate level, the Diffie-Hellman secret is used to encrypt all further communication between the client and the first node symmetrically. Next, the client sends a ``relay extend cell'' message to the first node, containing a circuit ID which might differ from the first one, a request in order to establish a connection from the first node to the second node, and the originator's half of another Diffie-Hellman handshake. The first node forwards this message to the second node in the chain and therefore extends the initial circuit. Like the way the first node did, the second node replies to that request with a hash of the given handshake part and adds its own half of the Diffie-Hellman handshake, by using a secure Hash function. The second node can only receive messages from the first node and cannot distinguish it from the initial client. Therefore the second node is unable to identify its predecessor as a node within the chain or as the client. As soon as the connection between both nodes is established, the first node sends a ``relay extended cell'' notification to the client, containing the second clients hash of the Diffie-Hellman secret, in order to inform it about the successful extension of the node chain. In the same manner as previously outlined, the ``relay extend cell'' procedure is repeated for every node, which was selected by the client to be a part of the transmission path.
 In order to place a request from the client to a server, the client encrypts the message symmetrically $N$ times, which is the same as the number of nodes $N$ in the selected node chain. For each encryption the previously negotiated Diffie-Hellman secret for the respective node is used, which on the one hand means that each encryption layer is encrypted with a different key and on the other hand only the node who possesses the same shared secret is able to remove the respective encryption layer.
 After the encryption, the message is transceived to the first node, where the first encryption layer (can be seen as the first layer of the onion) is removed. The result comprises of the $N-1$ times encrypted payload which is to be forwarded to the next node. This procedure is repeated likewise for each node until the original message is forwarded from the last node to the server. By default each node stores a mapping of the connection ID from the precedent chain participant to the connection ID of the subsequent participant. Therefore the client is not required to transmit the connection IDs of all connections within the message. According to the specification of the OR mechanism, the original message is sent unencrypted from the last node to the server. Nevertheless it does not matter whether the payload itself is encrypted or not as the primary aim of the OR method is to anonymize network traffic.
 The main benefit of using OR is the reduced traceability of network traffic from the outside, as due to the decryption of messages within the nodes, each input packet looks different from the output packet. Furthermore through the random choice of a node chain from a pool of nodes, each network path which is used by a server request and the respective response is changed. Therefore network traffic through OR is undeterminable. Except from that the public keys, which are negotiated for each transaction, are generated on a random basis. This as well as the undeterminable routing behavior, fulfill the requirements of perfect forward secrecy.~\cite{diffie1992authentication}
@@ -109,38 +109,38 @@ After the broad public got in contact with the OR concept through its Tor implem
 		\end{itemize}
 		\item Active Attacks
 		\begin{itemize} \itemsep0pt 
-			\item Finding Compromise keys: Learning the session key for an OR chain and subsequently trying to impersonate an OR chainnode. \fk{Is 'chainnode' really the appropriate name? In the literature, I don't find uses of 'chainnode'}
-			\item Impersonate components of an OR network: By impersonating either a server or a chainnode and inducing clients to connect to the fake component, attackers can gain information about the client and send false responses.
+			\item Finding Compromise keys: Learning the session key for an OR chain and subsequently trying to impersonate an OR.
+			\item Impersonate components of an OR network: By impersonating either a server or an Onion Router and inducing clients to connect to the fake component, attackers can gain information about the client and send false responses.
 			\item Denial-of-service attacks on network components: In order to remove certain chain nodes or servers and therefore increase the traffic load of the remaining ones (in combination with Impersonation attacks).
-			\item Tagging Attacks: Similar to man-in-the-middle attacks, with the difference that a sent request is tagged through alteration of its content. The damaged result from the server \fk{Which server? The destination of the message?} then implies that it received the message. 
+			\item Tagging Attacks: Similar to man-in-the-middle attacks, with the difference that a sent request is tagged through alteration of its content. The damaged result from the destination server then implies that it received the message. 
 			\item Replay Attack: By replaying the client's part of a initial Diffie-Hellman handshake the returned connection ID is the same but with different encryption keys, which destroys the original session of a client.
 			\item Supply Chain Attack: By distributing versions of OR which are adapted to the attackers purposes. 
 		\end{itemize}
-		\item Directory Node Attacks\fk{this is the first time we hear about directory nodes (dingledine calls them 'directory servers', probably following the Tor nomenclature.) We can't bring this concept up in the attacks, it must be introduced in the 'functional principle' section. (maybe in an additional paragraph that explains extensions of the original design that didn't have directory servers?))}
+		\item Directory Server Attacks
 			\begin{itemize} \itemsep0pt 
 			\item Destroy directory nodes: By executing a denial-of-service attack on a directory node, an attacker can significantly reduce the performance of an OR network or even prevent its service completely (in case they manage to attack all directory nodes successfully).
-			\item Subvert directory nodes: By taking over a directory server, attackers can modify them for their own purposes within an OR network and are able to copy the list of chainnodes. In case an attacker has taken over more than the half of all directory nodes they can include their own hostile chainnodes into the network, as the inclusion of new chainnodes is done on electoral basis and needs the approval of more than 50\% of all directorynodes in a network.
+			\item Subvert directory nodes: By taking over a directory server, attackers can modify them and are able to copy their list of Onion Routers. In case an attacker has taken over more than the half of all directory nodes they can include their own hostile nodes into the network, as the inclusion of new routers is done on electoral basis and needs the approval of more than 50\% of all directorynodes in a network.
 		\end{itemize}
 	\end{itemize}
 \end{description}
 
-According to its specification~\cite{torspec}, the Tor framework adapted its framework to most of these challenges appropriately but had to leave some of those security issues unresolved by now. For instance even in its Tor-customized form, the OR concept is still vulnerable to end-to-end correlation attacks. According to Shmatikov et al~\cite{shmatikov2006timing}, it is possible to match the communication between clients and servers by correlating the timestamps and the message sizes of the client's request and the server's response. Tor explicitly refrains from resolving this issue because the OR concept is intended to be a low-latency communication mechanism. Countermeasures would imply a massive increase in latency and therefore render bi-directional, latency-sensitive applications like SSH, VPN or instant messaging unusable.
+According to its specification~\cite{torspec}, the Tor framework adapted its framework to most of these challenges appropriately but had to leave some of those security issues unresolved by now. According to Shmatikov et al~\cite{shmatikov2006timing}, it is  possible to match the communication between clients and servers by correlating the timestamps and the message sizes of the client's request and the server's response. Tor explicitly refrains from resolving this issue because the OR concept is intended to be a low-latency communication mechanism. Countermeasures would imply a massive increase in latency and therefore render bi-directional, latency-sensitive applications like SSH, VPN or instant messaging unusable.
 Eavesdropping attacks are another issue (in this context also known as exit node sniffing), where attackers observe the plaintext communication between the exit node (end node of a chain) and the server. These attacks had already been successfully used to compromise the Tor network~\cite{eavesdrop} and are possible as the Tor framework is per design unable to include end-to-end encryption into its communication mechanism. Compared to the original OR concept, this weakness rather belongs to the Tor framework as in the original OR concept this issue would be resolvable by simply encrypting the payload before sending it.
 Another type of attack, defined by Wright, Adler and Levine~\cite{wright2004predecessor} are predecessor attacks. These do not only affect the OR concept but also network based anonymization mechanisms in general. Using the method of predecessor attacks (which is in general a traffic analysis attack), an attacker searches for identifiable communication streams and tracks them along their way from node to node. He does so by logging the node's activities from outside and identifying chains through timing and size analysis. In the case of OR it is feasible to log the activity of the entry node of a chain as well as the end node. In general if a client communicates with a server, it opens a session whose communication is routed in TCP messages over several chains. In the course of that session it is possible to gain information about the communication pattern of the client and gain insights into the routing behavior of the client. This information can then be used to conduct more targeted attacks on the client as well as the OR network as a whole. One countermeasure would be to send dummy messages across different dummy chains in order to deceive the attacker and show a different routing pattern. Another one to introduce delaying mechanisms by queuing messages in a chain node before forwarding them or by delaying them over a random period of time. The former countermeasure would increase data traffic in Tor networks massively and the latter one would increase response latencies greatly, which in turn would deteriorate the user experience and lead to malfunctions within time dependent applications. 
 
 \subsection {Related Work}
  \subsubsection {Mix Nets}
-Compared to the Onion Routing concept there are also other approaches which are partly older than OR. One of the first basic network anonymization protocols are mix networks~\cite{chaum1981untraceable}. In fact the idea behind the OR concept is based on mix networks and both concepts show many parallels. The mechanism was developed in 1981 by David Chaum and uses a network of chain nodes (mixes), which shuffle the sequence in which received messages are forwarded through several mix nodes to a receiver. In order to send a message, the sender encrypts a message using the public key of the receiver. Afterwards they further encrypt the message with the public keys of the mixes. As soon as the message is sent and arrives at the first mix node, it decrypts the first layer of encryption and is therefore able to recover the encrypted payload as well as the address of the next mixer, to which it forwards the payload. So all in all the idea of onion routing is strongly inspired by mix networks as the mechanism is the same in both technologies. However, the difference between both concepts is that a mixer does not immediately forward a received message to its successor\fk{and it does not establish a symmetric encryption channel, right?}. Furthermore, the sender appends a random value to the plain text message before encrypting and sending it. The random value acts as a salt in order to increase the length of the message to a standardized size. The salted message is subsequently encrypted with the receiver's public key and the result is extended by the receiver's address and then again wrapped into one or several encryption layers using the mixes public keys. Within each encryption layer a random value is added to the payload as a salt. Similarly to the OR concept, each mix node along a message's way from the sender to the receiver unwraps one layer of encryption from the message with its own private key. As result it gets the salt, the payload, and the address of the next mix node. The salt is discarded and the payload is forwarded after a random delay time. Mix networks use salting of the messages in order to keep the sizes of sent packets equal. This prevents an attacker from associating a message $A$ received by a node with the decrypted message $ A' $, which is forwarded to the next node, by simply comparing the message sizes, thereby tracking a message along its path. Harmonizing the lengths of transmitted messages makes size correlation attacks impossible for an attacker, both at the nodes as well as from end to end. Compared to Onion Routing, mix nets cover the sender's identity from a receiver by disguising the address of the sender. As a message is handed over to the receiver, they obtain the payload as well as an encrypted form of the sender's address. The address is likewise to the payload complemented with a random salt in order to prevent identification of the sender through its address length and encrypted with the mix nodes' public keys. The receiver answers to a request by a message which is also salted and encrypted using a public one time key. Both the encrypted sender address as well as the response are returned to the mix nets, who unwrap the sender's address along the mix node chain but are not able to decrypt the response message itself. Mix nets prevent timing analysis as well as size correlation attacks (traffic analysis) at the nodes as well as from end to end, both weaknesses of OR, by randomly delaying messages and standardizing their sizes. However, this advantage comes at the expense of increased latency, which OR does not suffer from. 
+Compared to the Onion Routing concept there are further approaches which are partly older than OR. One of the first basic network anonymization protocols are mix networks~\cite{chaum1981untraceable}. In fact the idea behind the OR concept is based on mix networks and both concepts show many parallels. The mechanism was developed in 1981 by David Chaum and uses a network of chain nodes (mixes), which shuffle the sequence in which received messages are forwarded through several mix nodes to a receiver. In order to send a message, the sender encrypts a message using the public key of the receiver. Afterwards they further encrypt the message with the public keys of the mixes. As soon as the message is sent and arrives at the first mix node, it decrypts the first layer of encryption and is therefore able to recover the encrypted payload as well as the address of the next mixer, to which it forwards the payload. So all in all the idea of onion routing is strongly inspired by mix networks as the mechanism is the same in both technologies. However, the difference between both concepts is that a mixer does not immediately forward a received message to its successor and also uses no encryption to secure the communication channel. Furthermore, the sender appends a random value to the plain text message before encrypting and sending it. The random value acts as a salt in order to increase the length of the message to a standardized size. The salted message is subsequently encrypted with the receiver's public key and the result is extended by the receiver's address and then again wrapped into one or several encryption layers using the mixes public keys. Within each encryption layer a random value is added to the payload as a salt. Similarly to the OR concept, each mix node along a message's way from the sender to the receiver unwraps one layer of encryption from the message with its own private key. As result it gets the salt, the payload, and the address of the next mix node. The salt is discarded and the payload is forwarded after a random delay time. Mix networks use salting of the messages in order to keep the sizes of sent packets equal. This prevents an attacker from associating a message $A$ received by a node with the decrypted message $ A' $, which is forwarded to the next node, by simply comparing the message sizes, thereby tracking a message along its path. Harmonizing the lengths of transmitted messages makes size correlation attacks impossible for an attacker, both at the nodes as well as from end to end. Compared to Onion Routing, mix nets cover the sender's identity from a receiver by disguising the address of the sender. As a message is handed over to the receiver, they obtain the payload as well as an encrypted form of the sender's address. The address is likewise to the payload complemented with a random salt in order to prevent identification of the sender through its address length and encrypted with the mix nodes' public keys. The receiver answers to a request by a message which is also salted and encrypted using a public one time key. Both the encrypted sender address as well as the response are returned to the mix nets, who unwrap the sender's address along the mix node chain but are not able to decrypt the response message itself. Mix nets prevent timing analysis as well as size correlation attacks (traffic analysis) at the nodes as well as from end to end, both weaknesses of OR, by randomly delaying messages and standardizing their sizes. However, this advantage comes at the expense of increased latency, which OR does not suffer from. 
 
 \subsubsection {Garlic Routing}
 According to Dingledine~\cite{dingledine2000free} anonymity channels such as anonymity networks should (except from anonymity) satisfy the requirements of low latency, delivery robustness and resistance to traffic analysis attacks. As the vulnerability to traffic analysis is, by design, one of the major weakpoints in OR, the concept has been further developed in order to fix that issue. The resulting approach is Garlic Routing (GR), which was first outlined by Michael J. Freedman in 2000. The principle behind GR is to bundle several messages together and to encrypt them afterwards like an onion, according to the concept of mix nets. That means that a sender first puts a number of messages together and encrypts them with the public keys of the chain nodes along the previously chosen path. The encryption scheme can be compared to the layers and the content of a garlic. As soon as the encryption layer are removed, a node finds the previously assembled messages to be transmitted. The main advantage behind this scheme are the encapsulation of several transmission routes within one packet, which means that the previous nodes, before the end node of a chain, cannot see that the transmitted package contains several messages. Another advantage is that the robustness of packet delivery is increased by that mechanism as the path redundancy is increased. Compared to mix nets, OR is not restricted to a specific packet size but is able to vary it. In connection to an attacker who attempts a (previously described) end-to-end size or node centered correlation attack, GR has the advantage that a big packet is split up into smaller packets along its transmission path. That means an attacker can never correlate the packet size from the sender to the receiver. They could only track a packet via its size from the beginning of a chain to the end node. However as the end node splits up the garlic and transmits the messages individually, his tracking attempt will fail at last at the end node. Therefore GR covers at least size-correlation attacks as well as tracking attempts and seems to be a practicable compromise between OR and mix nets. The major application where Garlic Routing is implemented (with some modifications) is I2P~\cite{i2p}. I2P (also known as the Invisible Internet Project) is an Open Source Project which provides similarly to the Tor framework anonymity for messages, sent across networks like the World Wide Web. It uses GR to build unidirectional communication tunnels. Because of their unidirectional usage each network agent creates one outbound and one inbound tunnel in order to establish a communication with one another. Through that tunnels I2P sends Garlic Messages, whereas each Garlic bulb contains all delivery instructions which are needed to deliver it to the right client and as soon as a message reaches its destination, the destination sends a Delivery Status Message back to the sender to signal whether the message delivery had been successful or not. All in all I2P does not only rely on Garlic Routing but complements it with EIGamal/AES encryption and pseudonymization mechanisms. 
 
 \subsubsection {Crowds}
-Compared to the previously described anonymization concepts, Crowds pursues a fundamentally different approach. Crowds creates anonymity by hiding a user in a crowd of users, whereas a sender's request is anonymized by disguising their identity as a member of a crowd. The idea was developed by Reiter and Rubin~\cite{reiter1998crowds} in 1998. Each crowd consists of at least one blender who is responsible for the management of the crowd members. The blender distributes symmetric keys to the members who are represented by so called ``jondos'', which are in fact implemented as an application, running on each member's machine. As soon as a new member registers to the crowd all other crowd members (jondos) are notified of its existence and in case a user sends a request to a server through its jondo, the jondo submits the request randomly (the probability is uniformly distributed whereas $p = 0.5$) to the end server or to a different jondo of the crowd, who then forwards it randomly to another members or to the end node. One central characteristic of the Crowds mechanism is that a jondo is unable to distinguish whether a request received by that jondo was originated by it or whether it was just forwarded from a previous member. Furthermore the communication between the members, except the communication between a member and the receiver, is symmetrically encrypted with the key issued by the blender. As each message is sent from member to member and at last to the end server the message draws a virtual path across a set of members. In case the end server (receiver) has to return a response, the response is sent backwards over the entire virtual path using a probability based algorithm. In order to be able to send a response backwards the members store from where a request came from, which means that each virtual path is saved within the jondos. In order to prevent traceability and to include new jondos these virtual paths are regularly torn down and reconstructed on demand. 
+Compared to the previously described anonymization concepts, Crowds pursues a fundamentally different approach. Crowds creates anonymity by hiding a user in a crowd of users, whereas a sender's request is anonymized by disguising their identity as a member of a crowd. The idea was developed by Reiter and Rubin~\cite{reiter1998crowds} in 1998. Each crowd consists of at least one blender who is responsible for the management of the crowd members. The blender distributes symmetric keys to the members who are represented by so called ``jondos'', which are implemented as an application, running on each member's machine. As soon as a new member registers to the crowd all other crowd members (jondos) are notified of its existence and in case a user sends a request to a server through its jondo, the jondo submits the request randomly (the probability is uniformly distributed whereas $p = 0.5$) to the end server or to a different jondo of the crowd, who then forwards it randomly to another members or to the end node. One central characteristic of the Crowds mechanism is that a jondo is unable to distinguish whether a request received by that jondo was originated by it or whether it was just forwarded from a previous member. Furthermore the communication between the members, except the communication between a member and the receiver, is symmetrically encrypted with the key issued by the blender. As each message is sent from member to member and at last to the end server the message draws a virtual path across a set of members. In case the end server (receiver) has to return a response, the response is sent backwards over the entire virtual path using a probability based algorithm. In order to be able to send a response backwards the members store from where a request came from, which means that each virtual path is saved within the jondos. In order to prevent traceability and to include new jondos these virtual paths are regularly torn down and reconstructed on demand. 
 The main advantage of the Crowds concept is that every jondo looks exactly as the others which implies that a receiver cannot work out the Crowd member who sent a request. Yet in comparison to OR, GR and Mix Nets, the Crowds mechanism is vulnerable to a range of attacks. For instance, Crowds are prone to predecessor attacks, as well as local eavesdropping attacks at the communication between a member and the receiver. Furthermore, in case a global attacker is able to monitor the traffic of all members he can easily track packages along their virtual paths by using node centered timestamp and size based correlation. Unless transmitted packages are standardized to common package sizes, the global attacker also has the facility to conduct end-to-end size correlation attacks. In comparison to the other mechanisms, the Crowds mechanism is rather robust regarding end-to-end time correlation attacks, as the number of jondos along a virtual path (and hence they average latency) can never be predicted due to the probability based forwarding mechanism. The unpredictability of the connection between the last jondo and the receiving server requires an eavesdropping attacker to monitor all outgoing connection from the nodes, unless they have obtained knowledge of the symmetric key of one of the members. Otherwise the probability of successfully sniffing a plaintext message is $1 / N$ (whereas $N$ is the number of members within the Crowd). Another successful attack method is to register hostile members to the Crowd or to hijack existing ones. Through them it is possible to gain the address of the receiver, which can be used for further attacks on the receiver. In contrast to that, Crowds is very secure regarding the anonymity of the sender in connection to attacks via the receiver, as each jondo looks the same as the others. 
 
 \section{Conclusion}
-Until this point we introduced four different low-latency network anonymization techniques, where Onion Routing is conceptually based on Mix Nets and Garlic Routing is in turn based on Onion Routing. They follow more or less the same idea but have different security characteristics. In addition to the concepts described above, many more network anonymization mechanisms are known.\fk{Can we produce a list?} Among those, OR and GR belong to the most important ones \fk{I don't understand - didn't we just refer to approaches other than OR, GR, and MN?}and are, especially through their use in the Tor and I2P frameworks, the most widely used anonymization techniques. However, recent research in this area showed that none of the current techniques is completely robust against tracking attacks as well as global or local correlation attacks. Also news report~\cite{torhacked}\fk{we should report the original statement from torproject here: https://blog.torproject.org/blog/tor-security-advisory-relay-early-traffic-confirmation-attack} from time to time that especially the Tor framework had been successfully compromised several times until now.\fk{members of the Tor development team state that the reports on the issue were misinterpreted and exaggerated. I don't think we should refer to them as facts} That shows that the current (low-latency) network anonymization solutions are not yet advanced far enough to overcome these problems.\fk{Hm. I'd rather say that the technology seems strong enough to withstand the most advanced of attackers, but weaknesses are identified from time to time} The security community is aware of that and -- especially within the context of ongoing discussions about Internet privacy and Internet surveillance -- there are many scientific initiatives~\cite{ORpublications} which aim to improve the OR concept. At the current state of the art regarding low-latency network anonymization techniques, however, there is still room for improvement.\fk{I don't think that's a good way to end the paper. There is always room for improvment on anything. Viewed this way, this is not a very interesting statement. If it is to be understood more specifically, we should be able to name the weaknesses. However, in the light of my comment above, I'd prefer a different ending.}
+Until this point we introduced four different low-latency network anonymization techniques, where Onion Routing is conceptually based on Mix Nets and Garlic Routing is in turn based on Onion Routing. They follow more or less the same idea but have different security characteristics. In addition to the concepts described above, many more network anonymization mechanisms are known, which are either based on encryption, decentralization and redundancy. Among those, OR and GR belong to the most important ones and are, especially through their use in the Tor and I2P frameworks, the most widely used anonymization techniques. However, recent research in this area showed that none of the current techniques is completely robust against tracking attacks as well as global or local correlation attacks. Also news report~\cite{torhacked} from time to time that especially the Tor framework had been successfully compromised several times until now. That shows that the current (low-latency) network anonymization solutions are already strong enough to overcome most of the above mentioned attack kinds, but still show weaknesses, which need to be improved. The security community is aware of that and -- especially within the context of ongoing discussions about Internet privacy and Internet surveillance -- there are many scientific initiatives~\cite{ORpublications} which aim to improve the OR concept. At the current state of the art regarding low-latency network anonymization techniques, however, there is still room for improvement, especially regarding towards timing and size correlation attacks which currently pose the biggest threat to the concept of OR.
 
 % References
 \newpage
